[tool.poetry]
name = "scramble-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyyaml = "^6.0.2"
pyqt6 = "^6.7.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
