[tool.poetry]
description = "Python app for generating scrambles for \"Rubik's\" puzzles."
name = "scramble_generator"
version = "1.15.3"
authors = ["Melvin Quick <melvinquick@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyyaml = "^6.0.2"
pyqt6 = "^6.7.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
